--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,9 +30,8 @@
         </header>
         <main class="px-3">
             <h1>YelpCamp</h1>
-            <p class="lead">Welcometo YelpCamp!<br>Jump right in and explore our many campgrounds.<br>Fell free to share
-                some of your own and
-                comment on others!</p>
+            <p class="lead">Welcome to YelpCamp!<br>Jump right in and explore our many campgrounds.<br>Fell free to
+                share some of your own and comment on others!</p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary fw-bold bg-white">View Campgrounds</a>
         </main>
 
