--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,7 +2,8 @@
 <div id="cluster-map"></div>
 <h1>All Campgrounds</h1>
 
-<% for (let campground of campgrounds) { %>
+<% for (let i = pageControler.firstCamp; i <= pageControler.lastCamp; i++) { %>
+<% const campground = campgrounds[i]; %>
 <div class="card mb-3">
     <div class="row">
         <div class="col-md-4">
@@ -28,9 +29,46 @@
 </div>
 <% } %>
 
+<nav aria-label="Campground Page Navigation">
+    <ul class="pagination">
+        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+        <% for (let i = 1; i <= pageCount; i++ ) { %>
+            <li class="page-item"><a class="page-link" href="/campgrounds/?page=<%= i %>"><%= i %></a></li>
+        <% } %>
+      <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
+</nav>
+
+<% for (let campground of campgrounds) { %>
+    <div class="card mb-3">
+        <div class="row">
+            <div class="col-md-4">
+                <% if (campground.images.length) { %>
+                <img class="img-fluid" alt="" src="<%= campground.images[0].url %> " crossorigin>
+                <% }  else { %>
+                <img class="img-fluid" alt=""
+                    src="https://res.cloudinary.com/dvty6r2wv/image/upload/v1674733835/YelpCamp/dtxjv8otolkdsuakijso.jpg"
+                    crossorigin>
+                <% } %>
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title"><%= campground.title %> </h5>
+                    <p class="card-text"><%= campground.description %> </p>
+                    <p class="card-text">
+                        <small class="text-muted"><%= campground.location %> </small>
+                    </p>
+                    <a class="btn btn-primary" href="/campgrounds/<%= campground._id %> ">View <%= campground.title %> </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <% } %>
+
 <script>
     const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
     const campgrounds = {features: <%- JSON.stringify(campgrounds) %>};
   </script>
 
 <script src="/javascripts/clusterMap.js"></script>
+
