--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -7,3 +7,35 @@
     width: 100%;
     height: 300px;
 }
+
+.row-index-page {
+    height: 100vh;
+    min-height: 300px;
+}
+
+.img-index-page {
+    height: 50vh;
+    min-height: 150px
+}
+
+.img-show-page {
+    height: 50vh;
+    min-height: 300px;
+}
+
+@media (min-width: 768px) {
+    .row-index-page {
+        height: 50vh;
+        min-height: 300px;
+    }
+
+    .img-index-page {
+        height: 50vh;
+        min-height: 300px;
+    }
+
+    .img-show-page {
+        height: 75vh;
+        min-height: 500px;
+    }
+}
