--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,12 +5,12 @@
 <% const campgroundsPage = campgrounds.slice(pagination.firstCamp, (pagination.lastCamp + 1)); %>
 <% for (let campground of campgroundsPage) { %>
 <div class="card mb-3">
-    <div class="row">
-        <div class="col-md-4">
+    <div class="row row-cols-1 row-cols-md-2 row-index-page">
+        <div class="col-md-4 d-flex justify-content-center">
             <% if (campground.images.length) { %>
-            <img class="img-fluid" alt="" src=" <%= campground.images[0].url %> " crossorigin>
+            <img class="img-fluid img-index-page" alt="" src=" <%= campground.images[0].url %> " crossorigin>
             <% } else { %>
-            <img class="img-fluid" alt=""
+            <img class="img-fluid img-index-page" alt=""
                 src="https://res.cloudinary.com/dvty6r2wv/image/upload/v1674668101/YelpCamp/zigp2sq1qzqobekp5ki3.jpg"
                 crossorigin>
             <% } %>
