--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -8,6 +8,14 @@ body {
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
+body a {
+    color: rgb(255, 255, 255);
+}
+
+body a:hover {
+    color: darkgray;
+}
+
 .cover-container {
     max-width: 60vw;
 }
