--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -6,16 +6,16 @@
 <% for (let campground of campgroundsPage) { %>
 <div class="card mb-3">
     <div class="row row-cols-1 row-cols-md-2 row-index-page">
-        <div class="col-md-5 d-flex justify-content-center">
+        <div class="col-md-4 d-flex justify-content-center">
             <% if (campground.images.length) { %>
             <img class="img-fluid img-index-page" alt="" src=" <%= campground.images[0].url %> " crossorigin>
             <% } else { %>
             <img class="img-fluid img-index-page" alt=""
-                src="https://images.unsplash.com/photo-1497900304864-273dfb3aae33?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1515&q=80"
+                src="https://res.cloudinary.com/dvty6r2wv/image/upload/v1674668101/YelpCamp/zigp2sq1qzqobekp5ki3.jpg"
                 crossorigin>
             <% } %>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title"><%= campground.title %> </h5>
                 <p class="card-text"><%= campground.description %> </p>
