--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,24 +30,13 @@
         </header>
         <main class="px-3">
             <h1>YelpCamp</h1>
-            <p>This is a "fake" website, built as part of <a
-                    href="https://www.udemy.com/course/the-web-developer-bootcamp/"><br>The Web Developer Bootcamp by
-                    Colt Steele</a>.</p>
-            <p>
-                Fell free to share some of your own fake campgrounds and comment on others!
-            </p>
-            <p>
-                But for that you'll have to register first (you don't have to use a real email).
-            </p>
+            <p class="lead">Welcome to YelpCamp!<br>Jump right in and explore our many campgrounds.<br>Fell free to
+                share some of your own and comment on others!</p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary fw-bold bg-white">View Campgrounds</a>
-            </p class="lead">Check out my <a href="www.linkedin.com/in/vagnerbmelo">Linkedin</a> and <a
-                href="https://github.com/VagnerBM?tab=repositories">GitHub</a>.
-            </p>
         </main>
-        <footer class="mt-auto text-white-50">
-            <p>&copy; 2023 YelpCamp</p>
-        </footer>
 
+        <footer class="mt-auto text-white-50"></footer>
+        <p>&copy; 2023 YelpCamp</p>
     </div>
 
 </body>
